--- a/css/estilos.css
+++ b/css/estilos.css
@@ -13,7 +13,7 @@
   border-radius: 3rem; }
 
 .key3-contacto {
-  background-image: url("..recursos/contacto/contacto__5.jpg");
+  background-image: url("..recursos/contacto/contacto__3.jpg");
   width: 30rem;
   height: 25rem;
   border: 1rem;
@@ -866,20 +866,20 @@ p a:hover {
     font-size: 1.5rem;
     padding-left: 1.5rem; }
   .imput__contacto__uno {
-    background-color: #cdeec9;
+    background-color: bisque;
     padding: 0.50rem;
     height: 2rem;
     width: 17rem; }
   .imput__contacto__dos {
-    background-color: #cdeec9;
+    background-color: bisque;
     padding: 0.50rem;
     height: 5rem;
     width: 15rem;
     text-align: left; }
   .imput__contacto__tres {
-    background-color: #cdeec9; }
+    background-color: bisque; }
   .imput__contacto__cuatro {
-    background-color: #cdeec9; }
+    background-color: bisque; }
 
 @media (min-width: 541px) and (max-width: 720px) {
   .contactoTituloh2 {
@@ -974,7 +974,7 @@ p a:hover {
     height: 17rem; }
   .container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 25rem 18rem 18rem 5rem 5rem;
+    grid-template-rows: 18rem 25rem 0.1rem 18rem 5rem 5rem;
     justify-items: left;
     align-items: left;
     padding: 0.5rem;
@@ -983,7 +983,7 @@ p a:hover {
     margin-left: 2rem;
     gap: 0.50rem;
     width: 19rem;
-    height: 92rem; }
+    height: 75rem; }
     .container__contacto__uno {
       align-content: center;
       grid-row: 1/2;
@@ -998,7 +998,8 @@ p a:hover {
     .container__contacto__dos {
       grid-row: 3/4;
       grid-column: 1/1;
-      width: 20rem; }
+      width: 0%;
+      height: 0%; }
     .container__contacto__tres {
       grid-row: 4/5;
       grid-column: 1/1;
