--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -123,14 +123,14 @@
      }
 
   &__contacto__uno {
-    background-color: rgb(205, 238, 201);  
+    background-color:bisque;
     padding: 0.50rem;
     height: 2rem;
     width: 17rem;
     }
 
  &__contacto__dos{
-    background-color: rgb(205, 238, 201);  
+    background-color:bisque;  
     padding: 0.50rem;
     height: 5rem;
     width: 15rem;
@@ -138,14 +138,12 @@
     }
 
  &__contacto__tres{
-    background-color: rgb(205, 238, 201);
+    background-color:bisque;
       }
 
  &__contacto__cuatro{
-    background-color: rgb(205, 238, 201);
+    background-color:bisque;
           }
-    
-
 }
 
 
@@ -214,7 +212,7 @@
       height: 5rem;
       }
 
-  }
+   }
   
   .textoGrid1{
     font-size: 0.8rem;
@@ -229,7 +227,7 @@
     font-size: 1.25rem;
     margin-left:3rem;
     text-align: center;
-   }
+    }
     
   .imput {
     font-size: 2rem;
@@ -261,7 +259,7 @@
     margin-left: 1rem;
     padding-top: 1rem;
     margin-bottom: 1rem;
-     }
+    }
 
   .key1-contacto{
     width: 17rem;
@@ -280,7 +278,7 @@
   
   .container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 25rem 18rem 18rem 5rem 5rem;
+    grid-template-rows: 18rem 25rem 0.1rem 18rem 5rem 5rem;
     justify-items: left;
     align-items: left;
     padding: 0.5rem;
@@ -289,7 +287,7 @@
     margin-left: 2rem;
     gap: 0.50rem;
     width: 19rem;
-    height:92rem;
+    height:75rem;
 
     &__uno {
       align-content: center;
@@ -309,7 +307,8 @@
     &__dos {
       grid-row: 3/4;
       grid-column: 1/1;
-      width: 20rem;
+      width:0%;
+      height:0% ;
        }
   
     &__tres {
@@ -325,7 +324,7 @@
       height: 5rem;
        }
   
-    &__tres__texto  {
+    &__tres__texto {
       grid-row: 6/7; 
       grid-column: 1/1;
       font-size: 0.5rem;
@@ -376,25 +375,25 @@
 
   
     &__contacto__uno {
-        height: 2rem;
-        width: 15em;
-        }
+      height: 2rem;
+      width: 15em;
+      }
       
     &__contacto__dos{
-        height: 5rem;
-        width: 15rem;
-        }
+      height: 5rem;
+      width: 15rem;
+      }
 
     &__contacto__tres{
-        height: 2rem;
-        width: 11rem;
-         }  
+      height: 2rem;
+      width: 11rem;
+      }  
     &__contacto__cuatro{
-          height: 2rem;
-          width: 10rem;
-          margin-left: 1rem;
-           }      
-         }
+      height: 2rem;
+      width: 10rem;
+      margin-left: 1rem;
+      }      
+    }
   }
  
 
